--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h2 class="font-medium text-lg mb-5 text-primary">Student College </h2>
                     
 
-                    <a href="#" class="text-base font-semibold text-black bg-primary py-3 px-8 
+                    <a href="#contact" class="text-base font-semibold text-black bg-primary py-3 px-8 
                     hover:shadow-lg hover:opacity-80 transition duration-300 
                     ease-in-out">Contact</a>
                 </div>
