--- a/index.html
+++ b/index.html
@@ -163,6 +163,16 @@
                     hover:shadow-lg transition duration-300 
                     ease-in-out">GitHub</a>
                 </div>
+                <div class="mb-12 p-8 md:w-1/3">
+                    <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="" alt="">
+                    </div>
+                    <h3 class="font-semibold text-xl text-black mt-5 mb-3 text-center">Date Type Classification</h3>
+                    <p class="font-medium text-base text-gray-500 mb-5">This contains a Jupyter Notebook that implements the K-Nearest Neighbors (KNN) classifier on the Ajwa or Medjool dataset. This dataset is sourced from the UCI Machine Learning Repository..</p>
+                    <a href="https://github.com/adnsyhh/Klasifikasi-Jenis-Kurma.git" class="text-base font-semibold rounded-2xl text-black border-2 border-black bg-transparent py-3 px-8
+                    hover:shadow-lg transition duration-300 
+                    ease-in-out">GitHub</a>
+                </div>
             </div>
         </div>
     </section>
@@ -263,6 +273,47 @@
                     </div>
                 </div>
                 <!-- c++ end -->
+                <!-- Java Start -->
+                <div class="grid grid-cols-3 gap-1 bg-gray-400 py-12 px-6 rounded-3xl">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="auto" height="120" viewBox="6.527 4.399 290.829 540.906" id="java">
+                        <path fill="#e76f00" d="M285.104 430.945h-2.037v-1.14h5.486v1.14h-2.025v5.688h-1.424v-5.688zm10.942.297h-.032l-2.02 5.393h-.924l-2.006-5.393h-.024v5.393h-1.343v-6.828h1.976l1.86 4.835 1.854-4.835h1.969v6.828h-1.311l.001-5.393z"></path>
+                        <path fill="#5382a1" d="M102.681 291.324s-14.178 8.245 10.09 11.035c29.4 3.354 44.426 2.873 76.825-3.259 0 0 8.518 5.341 20.414 9.967-72.63 31.128-164.376-1.803-107.329-17.743M93.806 250.704s-15.902 11.771 8.384 14.283c31.406 3.24 56.208 3.505 99.125-4.759 0 0 5.937 6.018 15.271 9.309-87.815 25.678-185.624 2.025-122.78-18.833"></path>
+                        <path fill="#e76f00" d="M168.625 181.799c17.896 20.604-4.701 39.146-4.701 39.146s45.439-23.458 24.571-52.833c-19.491-27.395-34.438-41.005 46.479-87.934.001-.001-127.013 31.721-66.349 101.621"></path>
+                        <path fill="#5382a1" d="M264.684 321.369s10.492 8.646-11.555 15.333c-41.923 12.7-174.488 16.535-211.314.507-13.238-5.76 11.587-13.752 19.396-15.429 8.144-1.766 12.798-1.437 12.798-1.437-14.722-10.371-95.157 20.363-40.857 29.166 148.084 24.015 269.944-10.814 231.532-28.14M109.499 208.617s-67.431 16.016-23.879 21.832c18.389 2.462 55.047 1.905 89.192-.956 27.906-2.354 55.928-7.358 55.928-7.358s-9.84 4.214-16.959 9.074c-68.475 18.01-200.756 9.631-162.674-8.79 32.206-15.568 58.392-13.802 58.392-13.802M230.462 276.231c69.608-36.171 37.425-70.932 14.96-66.248-5.506 1.146-7.961 2.139-7.961 2.139s2.045-3.202 5.947-4.588c44.441-15.624 78.619 46.081-14.346 70.521 0 0 1.079-.962 1.4-1.824"></path>
+                        <path fill="#e76f00" d="M188.495 4.399s38.55 38.562-36.563 97.862c-60.233 47.567-13.735 74.689-.025 105.678-35.158-31.723-60.96-59.647-43.65-85.637 25.406-38.151 95.792-56.648 80.238-117.903"></path>
+                        <path fill="#5382a1" d="M116.339 374.246c66.815 4.277 169.417-2.373 171.846-33.987 0 0-4.67 11.984-55.219 21.503-57.027 10.731-127.364 9.479-169.081 2.601.002-.002 8.541 7.067 52.454 9.883"></path>
+                        <path fill="#e76f00" d="M105.389 495.049c-6.303 5.467-12.96 8.536-18.934 8.536-8.527 0-13.134-5.113-13.134-13.314 0-8.871 4.937-15.357 24.739-15.357h7.328l.001 20.135m17.392 19.623V453.93c0-15.518-8.85-25.756-30.188-25.756-12.457 0-23.369 3.076-32.238 6.999l2.56 10.752c6.983-2.563 16.022-4.949 24.894-4.949 12.292 0 17.58 4.949 17.58 15.181v7.678h-6.135c-29.865 0-43.337 11.593-43.337 28.993 0 15.018 8.878 23.554 25.594 23.554 10.745 0 18.766-4.437 26.264-10.929l1.361 9.221 13.645-.002zM180.824 514.672h-21.691l-26.106-84.96h18.944l16.198 52.199 3.601 15.699c8.195-22.698 13.992-45.726 16.891-67.898h18.427c-4.938 27.976-13.822 58.684-26.264 84.96M264.038 495.049c-6.315 5.467-12.983 8.536-18.958 8.536-8.512 0-13.131-5.113-13.131-13.314 0-8.871 4.947-15.357 24.748-15.357h7.341v20.135m17.39 19.623V453.93c0-15.518-8.871-25.756-30.186-25.756-12.465 0-23.381 3.076-32.246 6.999l2.557 10.752c6.985-2.563 16.041-4.949 24.906-4.949 12.283 0 17.579 4.949 17.579 15.181v7.678h-6.146c-29.873 0-43.34 11.593-43.34 28.993 0 15.018 8.871 23.554 25.584 23.554 10.752 0 18.77-4.437 26.28-10.929l1.366 9.221 13.646-.002zM36.847 529.099c-4.958 7.239-12.966 12.966-21.733 16.206L6.527 535.2c6.673-3.424 12.396-8.954 15.055-14.104 2.3-4.581 3.252-10.485 3.252-24.604v-96.995h18.478v95.666c-.001 18.875-1.51 26.5-6.465 33.936"></path>
+                      </svg>
+                    <div class="text-base col-span-2 gap-2">
+                        <div class="grid grid-rows-2 w-auto">
+                            <h1 class="text-white h-16 md:h-20 w-auto">I used java for object oriented programming in 2024.</h1>
+                            <span class="block mt-5 text-xl font-jakarta font-extrabold tracking-wide bg-gradient-to-r from-black to-purple-400 text-transparent bg-clip-text">Beginner</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- Java End -->
+                <!-- HTML start -->
+                <div class="grid grid-cols-3 gap-1 bg-gray-400 py-12 px-6 rounded-3xl">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="auto" height="120" viewBox="0 0 64 64" id="html-file">
+                        <path fill="none" d="M0 0h64v64H0z"></path>
+                        <path fill="#bc4226" d="m13 56-5.01-5H13v5zM51 56l5.01-5H51v5z"></path>
+                        <path fill="#b2b2b2" d="M51 13h-7.99V5.01L51 13z"></path>
+                        <path fill="#f1f1f1" d="M43 5H14.59A1.59 1.59 0 0 0 13 6.59v51a1.6 1.6 0 0 0 1.59 1.6h34.82A1.6 1.6 0 0 0 51 57.54V13h-8Z"></path>
+                        <path fill="none" stroke="#231f20" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M43 5H14.59A1.59 1.59 0 0 0 13 6.59v51a1.6 1.6 0 0 0 1.59 1.6h34.82A1.6 1.6 0 0 0 51 57.54V13h-8Z"></path>
+                        <path fill="none" stroke="#231f20" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M51 13h-7.99V5.01L51 13zM13 56l-5.01-5H13v5zM51 56l5.01-5H51v5z"></path>
+                        <path fill="#e86741" d="M9 33h46a1 1 0 0 1 1 1v17H8V34a1 1 0 0 1 1-1Z"></path>
+                        <path fill="none" stroke="#231f20" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 33h46a1 1 0 0 1 1 1v17h0H8h0V34a1 1 0 0 1 1-1Z"></path>
+                        <path fill="#fff" d="M24.14 37.82V46h-2v-3.41h-3.1V46h-2v-8.18h2V41h3.1v-3.18zm7.24 0v1.58h-2.22V46h-2v-6.6H25v-1.58zm10.02.06V46h-2v-5.08L37.67 46H36l-1.77-5.09V46h-2v-8.12h2.41l2.21 5.66L39 37.88zm3.34 6.61h2.64V46h-4.61v-8.18h2z"></path>
+                        <path fill="#e86741" d="M28 24.19a2.76 2.76 0 0 1 .17.35.84.84 0 0 1 .08.33.74.74 0 0 1-.27.59 1 1 0 0 1-.7.24 1.5 1.5 0 0 1-.56-.1c-.32-.22-.66-.47-1-.76L24.59 24l-1.48-1.1-1.33-1a1 1 0 0 1-.35-.68 1 1 0 0 1 .47-.79l.46-.35.87-.68 1.06-.83 1.06-.84.86-.67a4.69 4.69 0 0 1 .47-.34 1.48 1.48 0 0 1 .55-.13 1 1 0 0 1 .71.25.83.83 0 0 1 .26.6 1 1 0 0 1-.24.68c-.24.19-.54.44-.91.72l-1.14.87-1.05.82-.85.67 4 3zm8-.02 4-3-.85-.67-1-.82-1.15-.82c-.37-.28-.67-.53-.91-.72a1 1 0 0 1-.24-.68.83.83 0 0 1 .26-.6 1 1 0 0 1 .71-.25 1.48 1.48 0 0 1 .55.13 4.69 4.69 0 0 1 .47.34l.86.67 1.06.84 1.06.83.87.68.46.35a1 1 0 0 1 .47.79 1 1 0 0 1-.35.68l-1.33 1L39.41 24l-1.13.85c-.36.29-.7.54-1 .76a1.5 1.5 0 0 1-.56.1 1 1 0 0 1-.7-.24.74.74 0 0 1-.27-.59.84.84 0 0 1 .08-.33 2.76 2.76 0 0 1 .17-.35z"></path>
+                      </svg>
+                    <div class="text-base col-span-2 gap-2">
+                        <div class="grid grid-rows-2 w-auto">
+                            <h1 class="text-white h-16 md:h-20 w-auto">I used HTML to create a personal web portfolio.</h1>
+                            <span class="block mt-5 text-xl font-jakarta font-extrabold tracking-wide bg-gradient-to-r from-black to-purple-400 text-transparent bg-clip-text">Beginner</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- HTML end -->
             </div>
         </div>
     </section>
