--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         </a>
 
                         <!-- LinkedIn -->
-                        <a href="https://www.linkedin.com/in/muhammad-adnansyah/" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border-sec hover:border-white hover:bg-gray-400 hover:text-white">
+                        <a href="https://www.linkedin.com/in/muhammad-adnansyah/" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center">
                             <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="fill-white">
                                 <title>LinkedIn</title>
                                 <path 
@@ -106,7 +106,7 @@
                         </a>
 
                         <!-- GitHub -->
-                        <a href="https://github.com/adnsyhh" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border-sec hover:border-white hover:bg-gray-400 hover:text-white">
+                        <a href="https://github.com/adnsyhh" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center">
                             <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="fill-white">
                                 <title>GitHub</title>
                                 <path 
