--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="w=full self-end px-4 lg:w-1/2">
                     <div class="relative mt-10 lg:mt-9 lg:right-0">
-                        <img src="dist/img/sapiens.svg" alt="pic" class="max-w-full mx-auto">
+                        <img src="dist/img/IMG_2114.JPG" alt="pic" class="max-w-full rounded-full sm:mx-auto lg:mx-auto" width="350" height="120">
                     </div>
                 </div>
             </div>
